manifests/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-internal
  namespace: hello-world
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 8080
