manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "hello-world"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 8080
