manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world
  namespace: hello-world
spec:
  to:
    kind: Service
    name: hello-world-internal
  port:
    targetPort: 8080
  tls:
    termination: edge
